syntax = "proto3";

package user;


option go_package = "user-service/proto;proto";


service UserService{
   rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
   rpc GetUser (GetUserRequest) returns (GetUserResponse);
}


message CreateUserRequest{
   string name = 1;
   string email = 2;
}

message CreateUserResponse{
   string user_id = 1;
}

message GetUserRequest{
   string user_id = 1;
}

message GetUserResponse{
   string user_id = 1;
   string name = 2;
   string email = 3;
}


